<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloEditarDatos"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/tituloConfirmDatos">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreCompleto"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/tvNombreEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fxNacimiento"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/tvFxNacimientoEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/tvTelefonoEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/tvEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descContacto"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/tvDescContactoEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data"></TextView>

    </LinearLayout>

    <Button
        android:id="@+id/miBotonEditDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/miBotonEditarDatos"
        android:theme="@style/miBotonRaised">
    </Button>

</LinearLayout>